Parser/RDFTESLAParser.cpp

// Generated from RDFTESLA.g4 by ANTLR 4.6


#include "RDFTESLAListener.h"

#include "RDFTESLAParser.h"


using namespace antlrcpp;
using namespace antlr4;

RDFTESLAParser::RDFTESLAParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

RDFTESLAParser::~RDFTESLAParser() {
  delete _interpreter;
}

std::string RDFTESLAParser::getGrammarFileName() const {
  return "RDFTESLA.g4";
}

const std::vector<std::string>& RDFTESLAParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& RDFTESLAParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- Static_referenceContext ------------------------------------------------------------------

RDFTESLAParser::Static_referenceContext::Static_referenceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RDFTESLAParser::Static_referenceContext::INT_VAL() {
  return getToken(RDFTESLAParser::INT_VAL, 0);
}

tree::TerminalNode* RDFTESLAParser::Static_referenceContext::FLOAT_VAL() {
  return getToken(RDFTESLAParser::FLOAT_VAL, 0);
}

tree::TerminalNode* RDFTESLAParser::Static_referenceContext::STRING_VAL() {
  return getToken(RDFTESLAParser::STRING_VAL, 0);
}

tree::TerminalNode* RDFTESLAParser::Static_referenceContext::BOOL_VAL() {
  return getToken(RDFTESLAParser::BOOL_VAL, 0);
}


size_t RDFTESLAParser::Static_referenceContext::getRuleIndex() const {
  return RDFTESLAParser::RuleStatic_reference;
}

void RDFTESLAParser::Static_referenceContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RDFTESLAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatic_reference(this);
}

void RDFTESLAParser::Static_referenceContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RDFTESLAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatic_reference(this);
}

RDFTESLAParser::Static_referenceContext* RDFTESLAParser::static_reference() {
  Static_referenceContext *_localctx = _tracker.createInstance<Static_referenceContext>(_ctx, getState());
  enterRule(_localctx, 0, RDFTESLAParser::RuleStatic_reference);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << RDFTESLAParser::INT_VAL)
      | (1ULL << RDFTESLAParser::FLOAT_VAL)
      | (1ULL << RDFTESLAParser::BOOL_VAL)
      | (1ULL << RDFTESLAParser::STRING_VAL))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Packet_referenceContext ------------------------------------------------------------------

RDFTESLAParser::Packet_referenceContext::Packet_referenceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RDFTESLAParser::Packet_referenceContext::EVT_NAME() {
  return getToken(RDFTESLAParser::EVT_NAME, 0);
}

tree::TerminalNode* RDFTESLAParser::Packet_referenceContext::SPARQL_VAR() {
  return getToken(RDFTESLAParser::SPARQL_VAR, 0);
}


size_t RDFTESLAParser::Packet_referenceContext::getRuleIndex() const {
  return RDFTESLAParser::RulePacket_reference;
}

void RDFTESLAParser::Packet_referenceContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RDFTESLAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPacket_reference(this);
}

void RDFTESLAParser::Packet_referenceContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RDFTESLAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPacket_reference(this);
}

RDFTESLAParser::Packet_referenceContext* RDFTESLAParser::packet_reference() {
  Packet_referenceContext *_localctx = _tracker.createInstance<Packet_referenceContext>(_ctx, getState());
  enterRule(_localctx, 2, RDFTESLAParser::RulePacket_reference);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    match(RDFTESLAParser::EVT_NAME);
    setState(75);
    match(RDFTESLAParser::T__0);
    setState(76);
    match(RDFTESLAParser::SPARQL_VAR);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Param_atomContext ------------------------------------------------------------------

RDFTESLAParser::Param_atomContext::Param_atomContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

RDFTESLAParser::Packet_referenceContext* RDFTESLAParser::Param_atomContext::packet_reference() {
  return getRuleContext<RDFTESLAParser::Packet_referenceContext>(0);
}

RDFTESLAParser::Static_referenceContext* RDFTESLAParser::Param_atomContext::static_reference() {
  return getRuleContext<RDFTESLAParser::Static_referenceContext>(0);
}


size_t RDFTESLAParser::Param_atomContext::getRuleIndex() const {
  return RDFTESLAParser::RuleParam_atom;
}

void RDFTESLAParser::Param_atomContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RDFTESLAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParam_atom(this);
}

void RDFTESLAParser::Param_atomContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RDFTESLAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParam_atom(this);
}

RDFTESLAParser::Param_atomContext* RDFTESLAParser::param_atom() {
  Param_atomContext *_localctx = _tracker.createInstance<Param_atomContext>(_ctx, getState());
  enterRule(_localctx, 4, RDFTESLAParser::RuleParam_atom);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case RDFTESLAParser::EVT_NAME: {
        setState(78);
        packet_reference();
        break;
      }

      case RDFTESLAParser::INT_VAL:
      case RDFTESLAParser::FLOAT_VAL:
      case RDFTESLAParser::BOOL_VAL:
      case RDFTESLAParser::STRING_VAL: {
        setState(79);
        static_reference();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Agg_one_referenceContext ------------------------------------------------------------------

RDFTESLAParser::Agg_one_referenceContext::Agg_one_referenceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RDFTESLAParser::Agg_one_referenceContext::INT_VAL() {
  return getToken(RDFTESLAParser::INT_VAL, 0);
}

tree::TerminalNode* RDFTESLAParser::Agg_one_referenceContext::EVT_NAME() {
  return getToken(RDFTESLAParser::EVT_NAME, 0);
}


size_t RDFTESLAParser::Agg_one_referenceContext::getRuleIndex() const {
  return RDFTESLAParser::RuleAgg_one_reference;
}

void RDFTESLAParser::Agg_one_referenceContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RDFTESLAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAgg_one_reference(this);
}

void RDFTESLAParser::Agg_one_referenceContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RDFTESLAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAgg_one_reference(this);
}

RDFTESLAParser::Agg_one_referenceContext* RDFTESLAParser::agg_one_reference() {
  Agg_one_referenceContext *_localctx = _tracker.createInstance<Agg_one_referenceContext>(_ctx, getState());
  enterRule(_localctx, 6, RDFTESLAParser::RuleAgg_one_reference);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    match(RDFTESLAParser::T__1);
    setState(83);
    match(RDFTESLAParser::INT_VAL);
    setState(84);
    match(RDFTESLAParser::T__2);
    setState(85);
    match(RDFTESLAParser::EVT_NAME);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Agg_betweenContext ------------------------------------------------------------------

RDFTESLAParser::Agg_betweenContext::Agg_betweenContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> RDFTESLAParser::Agg_betweenContext::EVT_NAME() {
  return getTokens(RDFTESLAParser::EVT_NAME);
}

tree::TerminalNode* RDFTESLAParser::Agg_betweenContext::EVT_NAME(size_t i) {
  return getToken(RDFTESLAParser::EVT_NAME, i);
}


size_t RDFTESLAParser::Agg_betweenContext::getRuleIndex() const {
  return RDFTESLAParser::RuleAgg_between;
}

void RDFTESLAParser::Agg_betweenContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RDFTESLAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAgg_between(this);
}

void RDFTESLAParser::Agg_betweenContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RDFTESLAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAgg_between(this);
}

RDFTESLAParser::Agg_betweenContext* RDFTESLAParser::agg_between() {
  Agg_betweenContext *_localctx = _tracker.createInstance<Agg_betweenContext>(_ctx, getState());
  enterRule(_localctx, 8, RDFTESLAParser::RuleAgg_between);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    match(RDFTESLAParser::T__3);
    setState(88);
    match(RDFTESLAParser::EVT_NAME);
    setState(89);
    match(RDFTESLAParser::T__4);
    setState(90);
    match(RDFTESLAParser::EVT_NAME);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Aggregate_atomContext ------------------------------------------------------------------

RDFTESLAParser::Aggregate_atomContext::Aggregate_atomContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RDFTESLAParser::Aggregate_atomContext::AGGR_FUN() {
  return getToken(RDFTESLAParser::AGGR_FUN, 0);
}

RDFTESLAParser::Packet_referenceContext* RDFTESLAParser::Aggregate_atomContext::packet_reference() {
  return getRuleContext<RDFTESLAParser::Packet_referenceContext>(0);
}

RDFTESLAParser::Agg_one_referenceContext* RDFTESLAParser::Aggregate_atomContext::agg_one_reference() {
  return getRuleContext<RDFTESLAParser::Agg_one_referenceContext>(0);
}

RDFTESLAParser::Agg_betweenContext* RDFTESLAParser::Aggregate_atomContext::agg_between() {
  return getRuleContext<RDFTESLAParser::Agg_betweenContext>(0);
}

std::vector<RDFTESLAParser::Attr_parameterContext *> RDFTESLAParser::Aggregate_atomContext::attr_parameter() {
  return getRuleContexts<RDFTESLAParser::Attr_parameterContext>();
}

RDFTESLAParser::Attr_parameterContext* RDFTESLAParser::Aggregate_atomContext::attr_parameter(size_t i) {
  return getRuleContext<RDFTESLAParser::Attr_parameterContext>(i);
}

std::vector<RDFTESLAParser::Attr_constraintContext *> RDFTESLAParser::Aggregate_atomContext::attr_constraint() {
  return getRuleContexts<RDFTESLAParser::Attr_constraintContext>();
}

RDFTESLAParser::Attr_constraintContext* RDFTESLAParser::Aggregate_atomContext::attr_constraint(size_t i) {
  return getRuleContext<RDFTESLAParser::Attr_constraintContext>(i);
}


size_t RDFTESLAParser::Aggregate_atomContext::getRuleIndex() const {
  return RDFTESLAParser::RuleAggregate_atom;
}

void RDFTESLAParser::Aggregate_atomContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RDFTESLAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAggregate_atom(this);
}

void RDFTESLAParser::Aggregate_atomContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RDFTESLAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAggregate_atom(this);
}

RDFTESLAParser::Aggregate_atomContext* RDFTESLAParser::aggregate_atom() {
  Aggregate_atomContext *_localctx = _tracker.createInstance<Aggregate_atomContext>(_ctx, getState());
  enterRule(_localctx, 10, RDFTESLAParser::RuleAggregate_atom);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    match(RDFTESLAParser::AGGR_FUN);
    setState(93);
    match(RDFTESLAParser::T__5);
    setState(94);
    packet_reference();
    setState(95);
    match(RDFTESLAParser::T__5);
    setState(110);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == RDFTESLAParser::T__9

    || _la == RDFTESLAParser::SPARQL_VAR) {
      setState(98);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case RDFTESLAParser::T__9: {
          setState(96);
          attr_parameter();
          break;
        }

        case RDFTESLAParser::SPARQL_VAR: {
          setState(97);
          attr_constraint();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(107);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == RDFTESLAParser::T__6) {
        setState(100);
        match(RDFTESLAParser::T__6);
        setState(103);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
          case RDFTESLAParser::T__9: {
            setState(101);
            attr_parameter();
            break;
          }

          case RDFTESLAParser::SPARQL_VAR: {
            setState(102);
            attr_constraint();
            break;
          }

        default:
          throw NoViableAltException(this);
        }
        setState(109);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(112);
    match(RDFTESLAParser::T__7);
    setState(113);
    match(RDFTESLAParser::T__7);
    setState(116);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case RDFTESLAParser::T__1: {
        setState(114);
        agg_one_reference();
        break;
      }

      case RDFTESLAParser::T__3: {
        setState(115);
        agg_between();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

RDFTESLAParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<RDFTESLAParser::ExprContext *> RDFTESLAParser::ExprContext::expr() {
  return getRuleContexts<RDFTESLAParser::ExprContext>();
}

RDFTESLAParser::ExprContext* RDFTESLAParser::ExprContext::expr(size_t i) {
  return getRuleContext<RDFTESLAParser::ExprContext>(i);
}

RDFTESLAParser::Param_atomContext* RDFTESLAParser::ExprContext::param_atom() {
  return getRuleContext<RDFTESLAParser::Param_atomContext>(0);
}

RDFTESLAParser::Aggregate_atomContext* RDFTESLAParser::ExprContext::aggregate_atom() {
  return getRuleContext<RDFTESLAParser::Aggregate_atomContext>(0);
}

tree::TerminalNode* RDFTESLAParser::ExprContext::BINOP_MUL() {
  return getToken(RDFTESLAParser::BINOP_MUL, 0);
}

tree::TerminalNode* RDFTESLAParser::ExprContext::BINOP_ADD() {
  return getToken(RDFTESLAParser::BINOP_ADD, 0);
}


size_t RDFTESLAParser::ExprContext::getRuleIndex() const {
  return RDFTESLAParser::RuleExpr;
}

void RDFTESLAParser::ExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RDFTESLAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpr(this);
}

void RDFTESLAParser::ExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RDFTESLAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpr(this);
}


RDFTESLAParser::ExprContext* RDFTESLAParser::expr() {
   return expr(0);
}

RDFTESLAParser::ExprContext* RDFTESLAParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  RDFTESLAParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  RDFTESLAParser::ExprContext *previousContext = _localctx;
  size_t startState = 12;
  enterRecursionRule(_localctx, 12, RDFTESLAParser::RuleExpr, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(127);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case RDFTESLAParser::T__5: {
        setState(119);
        match(RDFTESLAParser::T__5);
        setState(120);
        expr(0);
        setState(121);
        match(RDFTESLAParser::T__7);
        break;
      }

      case RDFTESLAParser::AGGR_FUN:
      case RDFTESLAParser::INT_VAL:
      case RDFTESLAParser::FLOAT_VAL:
      case RDFTESLAParser::BOOL_VAL:
      case RDFTESLAParser::STRING_VAL:
      case RDFTESLAParser::EVT_NAME: {
        setState(125);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
          case RDFTESLAParser::INT_VAL:
          case RDFTESLAParser::FLOAT_VAL:
          case RDFTESLAParser::BOOL_VAL:
          case RDFTESLAParser::STRING_VAL:
          case RDFTESLAParser::EVT_NAME: {
            setState(123);
            param_atom();
            break;
          }

          case RDFTESLAParser::AGGR_FUN: {
            setState(124);
            aggregate_atom();
            break;
          }

        default:
          throw NoViableAltException(this);
        }
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(137);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(135);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(129);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(130);
          match(RDFTESLAParser::BINOP_MUL);
          setState(131);
          expr(5);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(132);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(133);
          match(RDFTESLAParser::BINOP_ADD);
          setState(134);
          expr(4);
          break;
        }

        } 
      }
      setState(139);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- StaticAttr_definitionContext ------------------------------------------------------------------

RDFTESLAParser::StaticAttr_definitionContext::StaticAttr_definitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RDFTESLAParser::StaticAttr_definitionContext::SPARQL_VAR() {
  return getToken(RDFTESLAParser::SPARQL_VAR, 0);
}

RDFTESLAParser::Static_referenceContext* RDFTESLAParser::StaticAttr_definitionContext::static_reference() {
  return getRuleContext<RDFTESLAParser::Static_referenceContext>(0);
}


size_t RDFTESLAParser::StaticAttr_definitionContext::getRuleIndex() const {
  return RDFTESLAParser::RuleStaticAttr_definition;
}

void RDFTESLAParser::StaticAttr_definitionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RDFTESLAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStaticAttr_definition(this);
}

void RDFTESLAParser::StaticAttr_definitionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RDFTESLAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStaticAttr_definition(this);
}

RDFTESLAParser::StaticAttr_definitionContext* RDFTESLAParser::staticAttr_definition() {
  StaticAttr_definitionContext *_localctx = _tracker.createInstance<StaticAttr_definitionContext>(_ctx, getState());
  enterRule(_localctx, 14, RDFTESLAParser::RuleStaticAttr_definition);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(140);
    match(RDFTESLAParser::SPARQL_VAR);
    setState(141);
    match(RDFTESLAParser::T__8);
    setState(142);
    static_reference();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Attr_definitionContext ------------------------------------------------------------------

RDFTESLAParser::Attr_definitionContext::Attr_definitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RDFTESLAParser::Attr_definitionContext::VALTYPE() {
  return getToken(RDFTESLAParser::VALTYPE, 0);
}

tree::TerminalNode* RDFTESLAParser::Attr_definitionContext::SPARQL_VAR() {
  return getToken(RDFTESLAParser::SPARQL_VAR, 0);
}

RDFTESLAParser::ExprContext* RDFTESLAParser::Attr_definitionContext::expr() {
  return getRuleContext<RDFTESLAParser::ExprContext>(0);
}


size_t RDFTESLAParser::Attr_definitionContext::getRuleIndex() const {
  return RDFTESLAParser::RuleAttr_definition;
}

void RDFTESLAParser::Attr_definitionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RDFTESLAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAttr_definition(this);
}

void RDFTESLAParser::Attr_definitionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RDFTESLAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAttr_definition(this);
}

RDFTESLAParser::Attr_definitionContext* RDFTESLAParser::attr_definition() {
  Attr_definitionContext *_localctx = _tracker.createInstance<Attr_definitionContext>(_ctx, getState());
  enterRule(_localctx, 16, RDFTESLAParser::RuleAttr_definition);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(144);
    match(RDFTESLAParser::T__5);
    setState(145);
    match(RDFTESLAParser::VALTYPE);
    setState(146);
    match(RDFTESLAParser::T__7);
    setState(147);
    match(RDFTESLAParser::SPARQL_VAR);
    setState(148);
    match(RDFTESLAParser::T__8);
    setState(149);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Attr_constraintContext ------------------------------------------------------------------

RDFTESLAParser::Attr_constraintContext::Attr_constraintContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RDFTESLAParser::Attr_constraintContext::SPARQL_VAR() {
  return getToken(RDFTESLAParser::SPARQL_VAR, 0);
}

tree::TerminalNode* RDFTESLAParser::Attr_constraintContext::OPERATOR() {
  return getToken(RDFTESLAParser::OPERATOR, 0);
}

RDFTESLAParser::Static_referenceContext* RDFTESLAParser::Attr_constraintContext::static_reference() {
  return getRuleContext<RDFTESLAParser::Static_referenceContext>(0);
}


size_t RDFTESLAParser::Attr_constraintContext::getRuleIndex() const {
  return RDFTESLAParser::RuleAttr_constraint;
}

void RDFTESLAParser::Attr_constraintContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RDFTESLAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAttr_constraint(this);
}

void RDFTESLAParser::Attr_constraintContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<RDFTESLAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAttr_constraint(this);
}

RDFTESLAParser::Attr_constraintContext* RDFTESLAParser::attr_constraint() {
  Attr_constraintContext *_localctx = _tracker.createInstance<Attr_constraintContext>(_ctx, getState());
  enterRule(_localctx, 18, RDFTESLAParser::RuleAttr_constraint);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(151);
    match(RDFTESLAParser::SPARQL_VAR);
    setState(152);
    match(RDFTESLAParser::OPERATOR);
    setState(153);
    static_reference();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Attr_parameterContext ------------------------------------------------------------------

RDFTESLAParser::Attr_parameterContext::Attr_parameterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* RDFTESLAParser::Attr_parameterContext::VALTYPE() {
  return getToken(RDFTESLAParser::VALTYPE, 0);
}

tree::TerminalNode* RDFTESLAParser::Attr_parameterContext::SPARQL_VAR() {
  return getToken(RDFTESLAParser::SPARQL_VAR, 0);
}
